feat: limit recursive type handling and  extend example API routes with Zod validation
